--- a/index.html
+++ b/index.html
@@ -881,7 +881,10 @@ document.addEventListener('visibilitychange', async () => {
 });
 
 // WORKOUT
-function startWorkout() {
+async function startWorkout() {
+  // Explicitly unlock audio when starting workout
+  await unlockAudio();
+
   state.currentRound = 0;
   state.currentExercise = 0;
   state.isPaused = false;
@@ -1102,82 +1105,115 @@ function completeWorkout() {
 
 // Audio — single shared context, unlocked on first tap
 let audioCtx = null;
+let audioUnlocked = false;
+
 function getAudioCtx() {
-  if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-  if (audioCtx.state === 'suspended') audioCtx.resume();
+  if (!audioCtx) {
+    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  }
   return audioCtx;
 }
-// Unlock audio on first user interaction (iOS requirement)
-document.addEventListener('touchstart', () => getAudioCtx(), { once: true });
-document.addEventListener('click', () => getAudioCtx(), { once: true });
 
-function playSound(type) {
+async function unlockAudio() {
+  if (audioUnlocked) return;
+
+  const ctx = getAudioCtx();
+  if (ctx.state === 'suspended') {
+    await ctx.resume();
+  }
+
+  // Play a silent sound to truly unlock audio on iOS
+  const osc = ctx.createOscillator();
+  const g = ctx.createGain();
+  g.gain.value = 0.001;
+  osc.connect(g);
+  g.connect(ctx.destination);
+  osc.start(ctx.currentTime);
+  osc.stop(ctx.currentTime + 0.01);
+
+  audioUnlocked = true;
+  console.log('Audio unlocked, state:', ctx.state);
+}
+
+// Unlock audio on first user interaction (iOS requirement)
+document.addEventListener('touchstart', unlockAudio, { once: true });
+document.addEventListener('click', unlockAudio, { once: true });
+
+async function playSound(type) {
   try {
     const ctx = getAudioCtx();
+
+    // Ensure audio context is running
+    if (ctx.state === 'suspended') {
+      await ctx.resume();
+    }
+
     const t = ctx.currentTime;
 
     if (type === 'countdown') {
-      // Short tick
+      // Short tick - increased volume
       const osc = ctx.createOscillator();
       const g = ctx.createGain();
       osc.connect(g); g.connect(ctx.destination);
       osc.frequency.value = 880;
       osc.type = 'sine';
-      g.gain.setValueAtTime(0.2, t);
+      g.gain.setValueAtTime(0.3, t);
       g.gain.exponentialRampToValueAtTime(0.001, t + 0.1);
       osc.start(t); osc.stop(t + 0.1);
     }
     else if (type === 'go') {
-      // Rising two-tone "go!"
+      // Rising two-tone "go!" - increased volume
       [660, 880].forEach((freq, i) => {
         const osc = ctx.createOscillator();
         const g = ctx.createGain();
         osc.connect(g); g.connect(ctx.destination);
         osc.frequency.value = freq;
         osc.type = 'sine';
-        g.gain.setValueAtTime(0.25, t + i * 0.12);
+        g.gain.setValueAtTime(0.35, t + i * 0.12);
         g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.12 + 0.2);
         osc.start(t + i * 0.12); osc.stop(t + i * 0.12 + 0.2);
       });
     }
     else if (type === 'tick') {
-      // Subtle warning tick (last 3 sec)
+      // Subtle warning tick (last 3 sec) - increased volume
       const osc = ctx.createOscillator();
       const g = ctx.createGain();
       osc.connect(g); g.connect(ctx.destination);
       osc.frequency.value = 440;
       osc.type = 'triangle';
-      g.gain.setValueAtTime(0.18, t);
+      g.gain.setValueAtTime(0.25, t);
       g.gain.exponentialRampToValueAtTime(0.001, t + 0.12);
       osc.start(t); osc.stop(t + 0.12);
     }
     else if (type === 'done') {
-      // Cheerful triple tone
+      // Cheerful triple tone - increased volume
       [523, 659, 784].forEach((freq, i) => {
         const osc = ctx.createOscillator();
         const g = ctx.createGain();
         osc.connect(g); g.connect(ctx.destination);
         osc.frequency.value = freq;
         osc.type = 'sine';
-        g.gain.setValueAtTime(0.2, t + i * 0.12);
+        g.gain.setValueAtTime(0.3, t + i * 0.12);
         g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.12 + 0.25);
         osc.start(t + i * 0.12); osc.stop(t + i * 0.12 + 0.25);
       });
     }
     else if (type === 'complete') {
-      // Workout complete fanfare
+      // Workout complete fanfare - increased volume
       [523, 659, 784, 1047].forEach((freq, i) => {
         const osc = ctx.createOscillator();
         const g = ctx.createGain();
         osc.connect(g); g.connect(ctx.destination);
         osc.frequency.value = freq;
         osc.type = 'sine';
-        g.gain.setValueAtTime(0.22, t + i * 0.15);
+        g.gain.setValueAtTime(0.32, t + i * 0.15);
         g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.15 + 0.35);
         osc.start(t + i * 0.15); osc.stop(t + i * 0.15 + 0.35);
       });
     }
-  } catch(e) {}
+  } catch(e) {
+    console.error('Sound error:', e);
+  }
 }
 
 // Service worker
