Change version display from fixed to flow at bottom

--- a/index.html
+++ b/index.html
@@ -525,16 +525,12 @@ body {
 
 /* Version footer */
 .version {
-  position:fixed;
-  bottom:8px;
-  left:50%;
-  transform:translateX(-50%);
+  text-align:center;
+  padding:40px 0 20px;
   font-family:'JetBrains Mono',monospace;
   font-size:10px;
   color:var(--text-dim);
   opacity:0.4;
-  z-index:1000;
-  pointer-events:none;
 }
 
 /* Animations */
