--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ body {
 </div>
 
 <script>
-const APP_VERSION = 'v1.4.2';
+const APP_VERSION = 'v1.5.0';
 
 const EXERCISES = [
   {
@@ -899,8 +899,11 @@ document.addEventListener('visibilitychange', async () => {
 function startWorkout() {
   console.log('🏋️ startWorkout called');
 
-  // Explicitly unlock audio when starting workout (must be synchronous for iOS)
+  // Explicitly unlock audio when starting workout
   unlockAudio();
+
+  // Play a test sound to confirm audio works
+  setTimeout(() => playSound('countdown'), 100);
 
   state.currentRound = 0;
   state.currentExercise = 0;
@@ -1039,9 +1042,6 @@ function startTimer() {
 }
 
 function togglePause() {
-  // Ensure audio stays unlocked
-  unlockAudio();
-
   state.isPaused = !state.isPaused;
   document.getElementById('btn-pause').textContent = state.isPaused ? 'Resume' : 'Pause';
 }
@@ -1060,9 +1060,6 @@ function updateTimerRing(remaining, total) {
 }
 
 function nextExercise() {
-  // Ensure audio stays unlocked on every interaction
-  unlockAudio();
-
   clearInterval(state.timerInterval);
 
   const isLastExercise = state.currentExercise >= EXERCISES.length - 1;
@@ -1111,9 +1108,6 @@ function showRest(seconds, nextName, isRoundBreak) {
 }
 
 function skipRest() {
-  // Ensure audio stays unlocked
-  unlockAudio();
-
   clearInterval(state.timerInterval);
   document.getElementById('rest-overlay').classList.remove('active');
   loadExercise();
@@ -1129,150 +1123,106 @@ function completeWorkout() {
   showView('complete');
 }
 
-// Audio — single shared context, created immediately
-let audioCtx = null;
+// HTML5 Audio approach for iOS standalone PWA compatibility
 let audioUnlocked = false;
+const audioCache = {};
 
-function getAudioCtx() {
-  if (!audioCtx) {
-    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-    console.log('Audio context created, initial state:', audioCtx.state);
+// Generate audio data URLs for each sound type
+function generateAudioDataURL(frequencies, durations, type = 'sine') {
+  const sampleRate = 44100;
+  const totalDuration = frequencies.reduce((sum, _, i) => sum + durations[i], 0);
+  const numSamples = Math.floor(sampleRate * totalDuration);
+
+  const buffer = new ArrayBuffer(44 + numSamples * 2);
+  const view = new DataView(buffer);
+
+  // WAV header
+  const writeString = (offset, string) => {
+    for (let i = 0; i < string.length; i++) {
+      view.setUint8(offset + i, string.charCodeAt(i));
+    }
+  };
+
+  writeString(0, 'RIFF');
+  view.setUint32(4, 36 + numSamples * 2, true);
+  writeString(8, 'WAVE');
+  writeString(12, 'fmt ');
+  view.setUint32(16, 16, true);
+  view.setUint16(20, 1, true);
+  view.setUint16(22, 1, true);
+  view.setUint32(24, sampleRate, true);
+  view.setUint32(28, sampleRate * 2, true);
+  view.setUint16(32, 2, true);
+  view.setUint16(34, 16, true);
+  writeString(36, 'data');
+  view.setUint32(40, numSamples * 2, true);
+
+  // Generate samples
+  let sampleIndex = 0;
+  let timeOffset = 0;
+  for (let i = 0; i < frequencies.length; i++) {
+    const freq = frequencies[i];
+    const duration = durations[i];
+    const samplesForThisTone = Math.floor(sampleRate * duration);
+
+    for (let j = 0; j < samplesForThisTone; j++) {
+      const t = (sampleIndex + j) / sampleRate;
+      const fadeOut = Math.max(0, 1 - ((t - timeOffset) / duration) * 2);
+      const sample = Math.sin(2 * Math.PI * freq * t) * fadeOut * 0.3 * 32767;
+      view.setInt16(44 + (sampleIndex + j) * 2, sample, true);
+    }
+
+    sampleIndex += samplesForThisTone;
+    timeOffset += duration;
   }
-  return audioCtx;
+
+  const blob = new Blob([buffer], { type: 'audio/wav' });
+  return URL.createObjectURL(blob);
 }
 
-// Create audio context immediately on page load
-getAudioCtx();
+// Pre-generate all sound effects
+audioCache.countdown = generateAudioDataURL([880], [0.1]);
+audioCache.go = generateAudioDataURL([660, 880], [0.12, 0.12]);
+audioCache.tick = generateAudioDataURL([440], [0.12]);
+audioCache.done = generateAudioDataURL([523, 659, 784], [0.15, 0.15, 0.15]);
+audioCache.complete = generateAudioDataURL([523, 659, 784, 1047], [0.15, 0.15, 0.15, 0.2]);
+
+console.log('🔊 Audio files pre-generated');
 
 function unlockAudio() {
-  const ctx = getAudioCtx();
-  console.log('🔊 unlockAudio called, current state:', ctx.state, 'unlocked:', audioUnlocked);
+  if (audioUnlocked) return;
 
-  // Show visual feedback
-  const startBtn = document.querySelector('.btn-start');
-  if (startBtn) {
-    startBtn.style.opacity = '0.5';
-    setTimeout(() => { startBtn.style.opacity = '1'; }, 200);
-  }
-
-  // Always try to resume if suspended
-  if (ctx.state === 'suspended') {
-    console.log('⏸️ Context suspended, attempting resume...');
-    ctx.resume().then(() => {
-      console.log('▶️ Audio context resumed, new state:', ctx.state);
-    }).catch(e => {
-      console.error('❌ Failed to resume audio context:', e);
-    });
-  }
-
-  // Wait a tiny bit for resume, then play obvious test beep
-  setTimeout(() => {
-    try {
-      const t = ctx.currentTime;
-      const osc = ctx.createOscillator();
-      const g = ctx.createGain();
-      osc.connect(g);
-      g.connect(ctx.destination);
-      osc.frequency.value = 880;
-      osc.type = 'sine';
-      // LOUD and LONG beep so you can't miss it
-      g.gain.setValueAtTime(0.5, t);
-      g.gain.exponentialRampToValueAtTime(0.001, t + 0.2);
-      osc.start(t);
-      osc.stop(t + 0.2);
-
-      audioUnlocked = true;
-      console.log('🔔 Test beep played! If you heard it, audio is working.');
-    } catch (e) {
-      console.error('❌ Failed to play test beep:', e);
-    }
-  }, 50);
-
-  return ctx;
+  // Play a silent audio to unlock (iOS requirement)
+  const audio = new Audio(audioCache.countdown);
+  audio.volume = 0.7;
+  audio.play().then(() => {
+    audioUnlocked = true;
+    console.log('🔔 Audio unlocked via HTML5 Audio!');
+  }).catch(e => {
+    console.error('❌ Failed to unlock audio:', e);
+  });
 }
 
-// Unlock audio on ANY user interaction (iOS requirement)
+// Unlock audio on first interaction
 document.addEventListener('touchstart', unlockAudio, { once: true });
-document.addEventListener('touchend', unlockAudio, { once: true });
 document.addEventListener('click', unlockAudio, { once: true });
 
 function playSound(type) {
   try {
-    const ctx = getAudioCtx();
-    console.log('playSound called:', type, 'ctx state:', ctx.state);
-
-    // Ensure audio context is running
-    if (ctx.state === 'suspended') {
-      ctx.resume().then(() => {
-        console.log('Audio context resumed for sound:', type);
-      });
+    if (!audioCache[type]) {
+      console.warn('⚠️ Sound type not found:', type);
+      return;
     }
 
-    const t = ctx.currentTime;
-
-    if (type === 'countdown') {
-      // Short tick - increased volume
-      const osc = ctx.createOscillator();
-      const g = ctx.createGain();
-      osc.connect(g); g.connect(ctx.destination);
-      osc.frequency.value = 880;
-      osc.type = 'sine';
-      g.gain.setValueAtTime(0.3, t);
-      g.gain.exponentialRampToValueAtTime(0.001, t + 0.1);
-      osc.start(t); osc.stop(t + 0.1);
-    }
-    else if (type === 'go') {
-      // Rising two-tone "go!" - increased volume
-      [660, 880].forEach((freq, i) => {
-        const osc = ctx.createOscillator();
-        const g = ctx.createGain();
-        osc.connect(g); g.connect(ctx.destination);
-        osc.frequency.value = freq;
-        osc.type = 'sine';
-        g.gain.setValueAtTime(0.35, t + i * 0.12);
-        g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.12 + 0.2);
-        osc.start(t + i * 0.12); osc.stop(t + i * 0.12 + 0.2);
-      });
-    }
-    else if (type === 'tick') {
-      // Subtle warning tick (last 3 sec) - increased volume
-      const osc = ctx.createOscillator();
-      const g = ctx.createGain();
-      osc.connect(g); g.connect(ctx.destination);
-      osc.frequency.value = 440;
-      osc.type = 'triangle';
-      g.gain.setValueAtTime(0.25, t);
-      g.gain.exponentialRampToValueAtTime(0.001, t + 0.12);
-      osc.start(t); osc.stop(t + 0.12);
-    }
-    else if (type === 'done') {
-      // Cheerful triple tone - increased volume
-      [523, 659, 784].forEach((freq, i) => {
-        const osc = ctx.createOscillator();
-        const g = ctx.createGain();
-        osc.connect(g); g.connect(ctx.destination);
-        osc.frequency.value = freq;
-        osc.type = 'sine';
-        g.gain.setValueAtTime(0.3, t + i * 0.12);
-        g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.12 + 0.25);
-        osc.start(t + i * 0.12); osc.stop(t + i * 0.12 + 0.25);
-      });
-    }
-    else if (type === 'complete') {
-      // Workout complete fanfare - increased volume
-      [523, 659, 784, 1047].forEach((freq, i) => {
-        const osc = ctx.createOscillator();
-        const g = ctx.createGain();
-        osc.connect(g); g.connect(ctx.destination);
-        osc.frequency.value = freq;
-        osc.type = 'sine';
-        g.gain.setValueAtTime(0.32, t + i * 0.15);
-        g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.15 + 0.35);
-        osc.start(t + i * 0.15); osc.stop(t + i * 0.15 + 0.35);
-      });
-    }
+    const audio = new Audio(audioCache[type]);
+    audio.volume = 0.7;
+    audio.play().then(() => {
+      console.log('🔊 Played sound:', type);
+    }).catch(e => {
+      console.error('❌ Failed to play sound:', type, e);
+    });
   } catch(e) {
-    console.error('Sound error:', e);
+    console.error('❌ Sound error:', e);
   }
 }
 
