--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@ body {
 </div>
 
 <script>
-const APP_VERSION = 'v1.5.0';
+const APP_VERSION = 'v1.5.1';
 
 const EXERCISES = [
   {
@@ -897,13 +897,8 @@ document.addEventListener('visibilitychange', async () => {
 
 // WORKOUT
 function startWorkout() {
-  console.log('🏋️ startWorkout called');
-
   // Explicitly unlock audio when starting workout
   unlockAudio();
-
-  // Play a test sound to confirm audio works
-  setTimeout(() => playSound('countdown'), 100);
 
   state.currentRound = 0;
   state.currentExercise = 0;
@@ -1127,100 +1122,114 @@ function completeWorkout() {
 let audioUnlocked = false;
 const audioCache = {};
 
-// Generate audio data URLs for each sound type
-function generateAudioDataURL(frequencies, durations, type = 'sine') {
-  const sampleRate = 44100;
-  const totalDuration = frequencies.reduce((sum, _, i) => sum + durations[i], 0);
-  const numSamples = Math.floor(sampleRate * totalDuration);
+// Simpler approach: use Web Audio API but make it work in standalone
+let audioCtx = null;
+let audioUnlocked = false;
 
-  const buffer = new ArrayBuffer(44 + numSamples * 2);
-  const view = new DataView(buffer);
-
-  // WAV header
-  const writeString = (offset, string) => {
-    for (let i = 0; i < string.length; i++) {
-      view.setUint8(offset + i, string.charCodeAt(i));
-    }
-  };
-
-  writeString(0, 'RIFF');
-  view.setUint32(4, 36 + numSamples * 2, true);
-  writeString(8, 'WAVE');
-  writeString(12, 'fmt ');
-  view.setUint32(16, 16, true);
-  view.setUint16(20, 1, true);
-  view.setUint16(22, 1, true);
-  view.setUint32(24, sampleRate, true);
-  view.setUint32(28, sampleRate * 2, true);
-  view.setUint16(32, 2, true);
-  view.setUint16(34, 16, true);
-  writeString(36, 'data');
-  view.setUint32(40, numSamples * 2, true);
-
-  // Generate samples
-  let sampleIndex = 0;
-  let timeOffset = 0;
-  for (let i = 0; i < frequencies.length; i++) {
-    const freq = frequencies[i];
-    const duration = durations[i];
-    const samplesForThisTone = Math.floor(sampleRate * duration);
-
-    for (let j = 0; j < samplesForThisTone; j++) {
-      const t = (sampleIndex + j) / sampleRate;
-      const fadeOut = Math.max(0, 1 - ((t - timeOffset) / duration) * 2);
-      const sample = Math.sin(2 * Math.PI * freq * t) * fadeOut * 0.3 * 32767;
-      view.setInt16(44 + (sampleIndex + j) * 2, sample, true);
-    }
-
-    sampleIndex += samplesForThisTone;
-    timeOffset += duration;
+function getAudioContext() {
+  if (!audioCtx) {
+    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
   }
-
-  const blob = new Blob([buffer], { type: 'audio/wav' });
-  return URL.createObjectURL(blob);
+  return audioCtx;
 }
 
-// Pre-generate all sound effects
-audioCache.countdown = generateAudioDataURL([880], [0.1]);
-audioCache.go = generateAudioDataURL([660, 880], [0.12, 0.12]);
-audioCache.tick = generateAudioDataURL([440], [0.12]);
-audioCache.done = generateAudioDataURL([523, 659, 784], [0.15, 0.15, 0.15]);
-audioCache.complete = generateAudioDataURL([523, 659, 784, 1047], [0.15, 0.15, 0.15, 0.2]);
-
-console.log('🔊 Audio files pre-generated');
+// Create immediately
+getAudioContext();
 
 function unlockAudio() {
-  if (audioUnlocked) return;
+  const ctx = getAudioContext();
 
-  // Play a silent audio to unlock (iOS requirement)
-  const audio = new Audio(audioCache.countdown);
-  audio.volume = 0.7;
-  audio.play().then(() => {
-    audioUnlocked = true;
-    console.log('🔔 Audio unlocked via HTML5 Audio!');
-  }).catch(e => {
-    console.error('❌ Failed to unlock audio:', e);
-  });
+  if (ctx.state === 'suspended') {
+    ctx.resume();
+  }
+
+  // Play a test beep to unlock
+  if (!audioUnlocked) {
+    try {
+      const osc = ctx.createOscillator();
+      const g = ctx.createGain();
+      osc.connect(g);
+      g.connect(ctx.destination);
+      osc.frequency.value = 880;
+      g.gain.setValueAtTime(0.5, ctx.currentTime);
+      g.gain.exponentialRampToValueAtTime(0.001, ctx.currentTime + 0.1);
+      osc.start(ctx.currentTime);
+      osc.stop(ctx.currentTime + 0.1);
+      audioUnlocked = true;
+      console.log('🔔 Audio unlocked!');
+    } catch(e) {
+      console.error('❌ Unlock failed:', e);
+    }
+  }
 }
 
-// Unlock audio on first interaction
+// Unlock on first touch/click
 document.addEventListener('touchstart', unlockAudio, { once: true });
 document.addEventListener('click', unlockAudio, { once: true });
 
 function playSound(type) {
   try {
-    if (!audioCache[type]) {
-      console.warn('⚠️ Sound type not found:', type);
-      return;
+    const ctx = getAudioContext();
+
+    // Always try to resume
+    if (ctx.state === 'suspended') {
+      ctx.resume();
     }
 
-    const audio = new Audio(audioCache[type]);
-    audio.volume = 0.7;
-    audio.play().then(() => {
-      console.log('🔊 Played sound:', type);
-    }).catch(e => {
-      console.error('❌ Failed to play sound:', type, e);
-    });
+    const t = ctx.currentTime;
+
+    if (type === 'countdown') {
+      const osc = ctx.createOscillator();
+      const g = ctx.createGain();
+      osc.connect(g); g.connect(ctx.destination);
+      osc.frequency.value = 880;
+      g.gain.setValueAtTime(0.5, t);
+      g.gain.exponentialRampToValueAtTime(0.001, t + 0.1);
+      osc.start(t); osc.stop(t + 0.1);
+    }
+    else if (type === 'go') {
+      [660, 880].forEach((freq, i) => {
+        const osc = ctx.createOscillator();
+        const g = ctx.createGain();
+        osc.connect(g); g.connect(ctx.destination);
+        osc.frequency.value = freq;
+        g.gain.setValueAtTime(0.5, t + i * 0.12);
+        g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.12 + 0.2);
+        osc.start(t + i * 0.12); osc.stop(t + i * 0.12 + 0.2);
+      });
+    }
+    else if (type === 'tick') {
+      const osc = ctx.createOscillator();
+      const g = ctx.createGain();
+      osc.connect(g); g.connect(ctx.destination);
+      osc.frequency.value = 440;
+      osc.type = 'triangle';
+      g.gain.setValueAtTime(0.4, t);
+      g.gain.exponentialRampToValueAtTime(0.001, t + 0.12);
+      osc.start(t); osc.stop(t + 0.12);
+    }
+    else if (type === 'done') {
+      [523, 659, 784].forEach((freq, i) => {
+        const osc = ctx.createOscillator();
+        const g = ctx.createGain();
+        osc.connect(g); g.connect(ctx.destination);
+        osc.frequency.value = freq;
+        g.gain.setValueAtTime(0.5, t + i * 0.12);
+        g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.12 + 0.25);
+        osc.start(t + i * 0.12); osc.stop(t + i * 0.12 + 0.25);
+      });
+    }
+    else if (type === 'complete') {
+      [523, 659, 784, 1047].forEach((freq, i) => {
+        const osc = ctx.createOscillator();
+        const g = ctx.createGain();
+        osc.connect(g); g.connect(ctx.destination);
+        osc.frequency.value = freq;
+        g.gain.setValueAtTime(0.5, t + i * 0.15);
+        g.gain.exponentialRampToValueAtTime(0.001, t + i * 0.15 + 0.35);
+        osc.start(t + i * 0.15); osc.stop(t + i * 0.15 + 0.35);
+      });
+    }
   } catch(e) {
     console.error('❌ Sound error:', e);
   }
